added option to override memory requirements, added redistribute core for map phase